attempt to fix header on mobile

--- a/src/app/components/gameTable/game.table.component.scss
+++ b/src/app/components/gameTable/game.table.component.scss
@@ -1,5 +1,9 @@
 @import '../../../styles/variables';
 
+.week-change-button {
+  width: 125px;
+}
+
 .player-name {
   width: 200px;
 }
