--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,7 +2,9 @@
 
 :host {
   position: fixed;
-  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .nav-bar {
